[gd_scene load_steps=7 format=3 uid="uid://lxmyvwhjfh4w"]

[ext_resource type="Script" uid="uid://dlwken6mdarl" path="res://scripts/battle/enemy_sprite.gd" id="1_fsorm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fsorm"]
radius = 32.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fsorm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swqe7"]
bg_color = Color(0.260296, 0.420454, 0.262657, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsorm"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_swqe7"]
radius = 25.0

[node name="enemySprite" type="Sprite2D"]
process_priority = 4
script = ExtResource("1_fsorm")

[node name="mouseover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouseover"]
shape = SubResource("CircleShape2D_fsorm")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_fsorm")
theme_override_styles/fill = SubResource("StyleBoxFlat_swqe7")
value = 100.0
show_percentage = false

[node name="Area2D2" type="Area2D" parent="."]
collision_mask = 2

[node name="enemy" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_fsorm")

[node name="Timer" type="Timer" parent="."]

[node name="oa" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="oa"]
shape = SubResource("CircleShape2D_swqe7")

[connection signal="mouse_entered" from="mouseover" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="mouseover" to="." method="_on_mouseover_mouse_exited"]
[connection signal="mouse_entered" from="Area2D2" to="." method="_on_area_2d_2_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_on_area_2d_2_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_exited" from="oa" to="." method="_on_oa_area_exited"]
